Fix contrast issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,7 @@ body {
 pre[class^='language-'] {
   @apply -mx-5 px-5;
 
-  background: #2E3440;
+  background: hsl(220deg 16% 8%);
 }
 
 @screen sm {
